@@ -33,6 +33,7 @@
 - Bugfix: Wrong display of null and boolean default values in the
   code generation and method analysis.
 - Bugfix: Display of wrong filename when a kreXX resource is not readable.
+- Bugfix: The registry will not return values that are considered empty().
 
 3.0.2
 - Added classname to the declaration analysis of properties.
